   
Version 1.4-2

   o  For cases where translated help files of the form Commander-xx.Rd won't compile (where "xx" is the language code), translators can now provide a PDF file named Commander-xx.pdf to be substituted when users select Menu -> Commander help. (Thanks to Alexey Shipunov for helping me with this problem.)
   
   o  Dialogs that reset the active data set no longer do so if an error occurs; previously, resetting the active data set caused error messages to scroll off out of sight in the Messages window (problem reported by Peter Dalgaard).
   
   o  Improved error checking and protection in distributions dialogs.
   
Version 1.4-3

   o  Fixed a bug in the scroll-bar for the RHS of model formulas (reported by Ulrich Halekoh).
   
   o  Fixed problem with some legends in plotMeans() (reported by Rich Heiberger).
   
   o  Updated Spanish translation (courtesy Rcmdr Spanish translation team).
   
Version 1.4-4
   
   o  Small changes to Hist() to make it more flexible (suggested by Gilles Marcou).
   
Version 1.4-5

   o  Change to Message(), which posts messages to the Message window, to prevent the window from freezing in (some) Windows systems under R 2.8.0 (problem reported by Rich Heiberger).
   
   o  Updated Indonesian translation (thanks to I. Made Tirta).
   
Version 1.4-6

   o  Added polr and multinom models to effect-plots, consistent with latest version of effects package.
   
   o  ttkentry() redefined to trim leading and trailing blanks (to avoid potential problems when user introduces a leading or trailing blank in a text field, as reported by Rich Heiberger).
   
   o  An attempt is made to break commands at blanks and commas to fit them in the script and output windows.
   
   o  Improvements to the one-way and multi-way ANOVA dialogs, including saving the models that are produced (suggested by Rich Heiberger).
   
   o  Improvements and bug fixes to handling of plug-in menu installation.
   
   o  Small changes.